--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "mongoose-aggregate-paginate-v2": "^1.0.7",
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
     "multer": "^1.4.5-lts.1"
